Predict a song hit or not
